prueba androd studio 1.0

--- a/app/src/main/res/layout/fragment_agregar.xml
+++ b/app/src/main/res/layout/fragment_agregar.xml
@@ -5,7 +5,7 @@
     tools:context="marcorafael.prueba1.fragmentAgregar">
 
     <!-- TODO: Update blank fragment layout -->
-
+<!-- hablameee-->
 
     <ScrollView
         android:layout_width="match_parent"
