--- a/app/src/main/res/drawable/btn_circle_logo.xml
+++ b/app/src/main/res/drawable/btn_circle_logo.xml
@@ -3,7 +3,7 @@
 
 
   android:shape="oval">
-    <solid android:color="#FF679A02"/>
+    <solid android:color="@color/colorPrimary"/>
     <size android:width="100dp" android:height="100dp"></size>
 
 
