--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="@drawable/materialdesignmenu"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -14,10 +14,9 @@
 
     <ImageView
         android:id="@+id/imagenprincipal"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/logointer"
-        />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/cuadros" />
 
 
     <TextView
