--- a/app/src/main/res/layout/fragment_exportar.xml
+++ b/app/src/main/res/layout/fragment_exportar.xml
@@ -20,8 +20,8 @@
         android:id="@+id/textView" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:text="Excel"
         android:id="@+id/bfex_excel"
         android:layout_below="@+id/textView"
@@ -31,18 +31,20 @@
         android:layout_marginStart="57dp"
         android:layout_marginTop="51dp"
         android:background="@drawable/btn_circle_logo"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:textSize="18dp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="???"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:text="aaa"
         android:id="@+id/button2"
         android:layout_below="@+id/bfex_excel"
         android:layout_alignLeft="@+id/bfex_excel"
         android:layout_alignStart="@+id/bfex_excel"
         android:layout_marginTop="26dp"
         android:background="@drawable/btn_circle_logo"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:textSize="18dp" />
 
 </RelativeLayout>
