--- a/app/src/main/res/layout/activity_configuracion.xml
+++ b/app/src/main/res/layout/activity_configuracion.xml
@@ -17,8 +17,8 @@
         android:background="@drawable/btn_circle_logo"
         android:textColor="#ffffff"
         android:layout_below="@+id/cbac_zonas"
-        android:layout_alignLeft="@+id/bac_agregarCategoria"
-        android:layout_alignStart="@+id/bac_agregarCategoria" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="18dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -38,9 +38,9 @@
         android:id="@+id/bac_agregarCategoria"
         android:background="@drawable/btn_circle_logo"
         android:textColor="#ffffff"
-        android:layout_above="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="22dp" />
+        android:layout_marginBottom="18dp"
+        android:layout_above="@+id/linearLayout"
+        android:layout_centerHorizontal="true" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -78,25 +78,27 @@
         android:textColor="#010000"
         android:textSize="18dp"
         android:layout_centerVertical="true"
-        android:layout_alignRight="@+id/twc_seleccione"
-        android:layout_alignEnd="@+id/twc_seleccione" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/etac_categorias"
-        android:layout_marginTop="16dp"
         android:textColor="@color/colorAccent"
         android:layout_below="@+id/twc_seleccione"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_below="@+id/etac_categorias"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@android:drawable/button_onoff_indicator_off"
+        android:id="@+id/linearLayout"
+        android:layout_above="@+id/textView2"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="18dp"></LinearLayout>
 
 </RelativeLayout>
