--- a/app/src/main/res/layout/fragment_agregar.xml
+++ b/app/src/main/res/layout/fragment_agregar.xml
@@ -39,7 +39,7 @@
                         android:text="Codigo"
                         android:id="@+id/bfa_codigo"
                         android:layout_margin="10dp"
-                        android:background="@color/colorPrimary"
+                        android:background="@drawable/btn_redondeadouno"
                         android:textColor="#ffffff" />
 
                 </LinearLayout>
@@ -147,12 +147,12 @@
 
                 <Button
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:text="Guardar"
                     android:id="@+id/bfa_guardar"
                     android:layout_gravity="center_horizontal"
                     android:textColor="#ffffff"
-                    android:background="@drawable/btn_circle_logo"
+                    android:background="@drawable/btn_redondeadouno"
                     android:textSize="15dp" />
 
             </LinearLayout>
