--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,9 @@
         android:orderInCategory="100"
         android:title="Configuracion"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_ayuda"
+        android:orderInCategory="100"
+        android:title="Ayuda"
+        app:showAsAction="never" />
 </menu>
