--- a/app/src/main/res/layout/fragment_agregar.xml
+++ b/app/src/main/res/layout/fragment_agregar.xml
@@ -143,9 +143,15 @@
                         android:text="Reparacion"
                         android:id="@+id/rgfa_reparacion"
                         android:textColorHint="@color/colorPrimary" />
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="En Uso"
+                        android:id="@+id/rgfa_uso" />
                 </RadioGroup>
 
-                <Button
+            <Button
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:text="Guardar"
